--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="frame-container2">
             <img
               class="manga"
-              src="https://lh3.googleusercontent.com/proxy/BAQP_A3OLTdAitUX8arWY2In1RQ63zm22FCRUM9Ar79bJWvqunSCJCtA81L4KFopNQ-EyXBTIc6n0O402S6Wu-DhmCtcQTqLMco"
+              src="https://i.ebayimg.com/images/g/BgsAAOSwR6ZfAAtQ/s-l1600.jpg"
               alt="manga-img1"
             />
             <img
