--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="loader.css" />
     <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="modal.css" />
 
     <script defer src="js/show.js"></script>
     <script defer src="js/menu.js"></script>
+    <script defer src="js/modal.js"></script>
 
     <link
       rel="shortcut icon"
@@ -80,6 +82,13 @@
               height="200"
               src="https://www.youtube.com/embed/OkrbVBUa4S0"
             ></iframe>
+          </div>
+
+
+          <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
           </div>
 
           <p class="trailer2">Manga</p>
