--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
       <div id="stars3"></div>
     </span>
 
+    <header>
+      <div class="menu">
+        <div class="menu-content">
+          <h2>Menu</h2>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Artist</a></li>
+            <li><a href="#">Consert</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <span id="crossButton">&#10006;</span>
+      </div>
+    </header>
+      
+
     <main class="main">
       <div id="stars-bg"></div>
       <div id="stars-bg2"></div>
@@ -47,7 +63,7 @@
             alt="Title"
           />
           <div class="mobile-menu">
-            <div>
+            <div id="mobile-menu-btn">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
@@ -126,7 +142,7 @@
         </div>
 
         <div class="right">
-          <div class="container">
+          <div class="container" id="menu-btn">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
