--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
             <li><a href="#">Consert</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
+          <button class="nightmode">YEP</button>
+          <span id="crossButton">&#10006;</span>
         </div>
-        <span id="crossButton">&#10006;</span>
       </div>
     </header>
       
