--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="fade.css" />
     <link rel="stylesheet" href="loader.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="color.css" />
     <link rel="stylesheet" href="menu.css" />
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="media.css" />
@@ -46,7 +47,7 @@
             <li><a href="#">Consert</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
-          <button class="nightmode">YEP</button>
+          <button class="darkmode">YEP</button>
           <span id="crossButton">&#10006;</span>
         </div>
       </div>
