--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="loader.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="color.css" />
+    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="menu.css" />
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="media.css" />
