--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           </ul>
           <button class="darkmode">YEP</button>
           <span id="crossButton">&#10006;</span>
+          <div id="stars-menu"></div>
+          <div id="stars-menu2"></div>
         </div>
       </div>
     </header>
