--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Wandering Witch</title>
+    
     <link rel="stylesheet" href="fade.css" />
     <link rel="stylesheet" href="loader.css" />
     <link rel="stylesheet" href="style.css" />
@@ -85,8 +86,7 @@
             <iframe
               width="300"
               height="200"
-              src="https://www.youtube.com/embed/OkrbVBUa4S0"
-            ></iframe>
+              src="https://www.youtube.com/embed/OkrbVBUa4S0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
           </div>
           <footer class="big-footer">
             <h1>Mady By WendigOuO</h1>
@@ -101,7 +101,7 @@
             <iframe
               width="300"
               height="200"
-              src="https://www.youtube.com/embed/OkrbVBUa4S0"
+              src="https://www.youtube.com/embed/OkrbVBUa4S0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
             ></iframe>
           </div>
 
