--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,34 @@
     <link rel="stylesheet" href="modal.css" />
 
     <script defer src="js/menu.js"></script>
+    <script defer src="js/login.js"></script>
     <script defer src="js/modal.js"></script>
+
+
+<!-- !Firebase -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAa1_9ozFyRQLHI5GgA7Q_QN6kM0UQooOA",
+    authDomain: "witch-jing.firebaseapp.com",
+    projectId: "witch-jing",
+    storageBucket: "witch-jing.appspot.com",
+    messagingSenderId: "302393023173",
+    appId: "1:302393023173:web:e215713454fdffae6c6eac",
+    measurementId: "G-NLL4MTV802"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 
     <link
       rel="shortcut icon"
@@ -49,9 +76,10 @@
             <li><a href="#">Consert</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
+          <button id="signInBtnGoogle">Google</button>    
           <button class="darkmode">YEP</button>
           <span id="crossButton">&#10006;</span>
-          <div id="stars-menu"></div>
+          <div id="stars-menu"></div> 
           <div id="stars-menu2"></div>
         </div>
       </div>
