--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="media.css" />
     <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="login.css" />
 
     <script defer src="js/menu.js"></script>
     <script defer src="js/login.js"></script>
@@ -23,16 +24,12 @@
 
 
 <!-- !Firebase -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
 
 <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   var firebaseConfig = {
     apiKey: "AIzaSyAa1_9ozFyRQLHI5GgA7Q_QN6kM0UQooOA",
     authDomain: "witch-jing.firebaseapp.com",
@@ -76,7 +73,18 @@
             <li><a href="#">Consert</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
-          <button id="signInBtnGoogle">Google</button>    
+
+          
+          <section id="whenSignedOut">
+          <button id="signInBtnGoogle" class="btn login">Google</button>
+          </section>
+
+          <section id="whenSignedIn">
+            <span id="userDetails"></span>
+            <span id="userImg"></span>
+            <button id="signOutBtn" class="btn signOut">Logout 😜</button>
+          </section>
+
           <button class="darkmode">YEP</button>
           <span id="crossButton">&#10006;</span>
           <div id="stars-menu"></div> 
