--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script defer src="js/menu.js"></script>
     <script defer src="js/login.js"></script>
     <script defer src="js/modal.js"></script>
+    <script defer src="js/darkmode.js"></script>
 
 
 <!-- !Firebase -->
