--- a/public/index.html
+++ b/public/index.html
@@ -67,16 +67,9 @@
     <header>
       <div class="menu">
         <div class="menu-content">
-          <h2>Menu</h2>
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Artist</a></li>
-            <li><a href="#">Consert</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
+          <div class="top">
 
-          
-          <section id="whenSignedOut">
+            <section id="whenSignedOut">
           <button id="signInBtnGoogle" class="btn login">Google</button>
           </section>
 
@@ -88,6 +81,17 @@
 
           <button class="darkmode">YEP</button>
           <span id="crossButton">&#10006;</span>
+          </div>
+          <div class="grid">
+
+            <h2>Menu</h2>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Artist</a></li>
+              <li><a href="#">Consert</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </div>
           <div id="stars-menu"></div> 
           <div id="stars-menu2"></div>
         </div>
