--- a/public/index.html
+++ b/public/index.html
@@ -68,29 +68,126 @@
       <div class="menu">
         <div class="menu-content">
           <div class="top">
-
-            <section id="whenSignedOut">
-          <button id="signInBtnGoogle" class="btn login">Google</button>
-          </section>
-
-          <section id="whenSignedIn">
+                <div id="whenSignedOut">
+                <button id="signInBtnGoogle" class="btn login">Google</button>
+            </div>
+  
+          <div id="whenSignedIn">
             <span id="userDetails"></span>
-            <span id="userImg"></span>
-            <button id="signOutBtn" class="btn signOut">Logout 😜</button>
-          </section>
-
-          <button class="darkmode">YEP</button>
-          <span id="crossButton">&#10006;</span>
+              <span id="userImg"></span>
+              <button id="signOutBtn" class="btn signOut">Logout</button>
           </div>
+  
+          <button class="s">:3</button>
+          <button class="darkmode">YEP</button>
+          
+          <div id="crossButton">&#10006;</div>
+        </div>
+          <h2>Menu</h2>
+          <!-- !!HÄR E GRID!!!! -->
+          <!-- !!HÄR E GRID!!!! -->
+          <!-- !!HÄR E GRID!!!! -->
           <div class="grid">
-
-            <h2>Menu</h2>
+            <div class="box">
             <ul>
               <li><a href="#">About</a></li>
-              <li><a href="#">Artist</a></li>
-              <li><a href="#">Consert</a></li>
-              <li><a href="#">FAQ</a></li>
             </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
           </div>
           <div id="stars-menu"></div> 
           <div id="stars-menu2"></div>
