Menu Logo :memo:

--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,17 @@
       <div class="menu">
         <div class="menu-content">
           <div class="top">
-                <div id="whenSignedOut">
-                <button id="signInBtnGoogle" class="btn login">Google</button>
+
+          <img
+          class="title"
+          src="https://media.vgm.io/products/13/7731/7731-1601738358.png"
+          alt="Logo"
+        />
+
+        <button class="s">:3</button>
+        <button class="darkmode">YEP</button>
+        <div id="whenSignedOut">
+          <button id="signInBtnGoogle" class="btn login">Google</button>
             </div>
   
           <div id="whenSignedIn">
@@ -77,9 +86,6 @@
               <span id="userImg"></span>
               <button id="signOutBtn" class="btn signOut">Logout</button>
           </div>
-  
-          <button class="s">:3</button>
-          <button class="darkmode">YEP</button>
           
           <div id="crossButton">&#10006;</div>
         </div>
