--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script defer src="js/menu.js"></script>
     <script defer src="js/login.js"></script>
     <script defer src="js/modal.js"></script>
+    <script defer src="js/scroll.js"></script>
     <script defer src="js/darkmode.js"></script>
 
 
@@ -92,114 +93,32 @@
           
           <div id="crossButton">&#10006;</div>
         </div>
-          <h2>Menu</h2>
-          <!-- !!HÄR E GRID!!!! -->
-          <!-- !!HÄR E GRID!!!! -->
-          <!-- !!HÄR E GRID!!!! -->
+
+          <div class="block" id="container">
+            <ul class="data" data-current="0">
           <div class="grid">
-            <div class="box">
+            <span class="box">
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="#">a</a></li>
             </ul>
-            </div>
-            <div class="box">
+            </span>
+            <span class="box">
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="#">b</a></li>
             </ul>
-            </div>
-            <div class="box">
+            </span>
+            <span class="box">
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="#">c</a></li>
             </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
-            <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-            </div>
+            </span>
           </div>
+        </ul>
+          </div>
+
           <div id="stars-menu"></div> 
           <div id="stars-menu2"></div>
+        
         </div>
       </div>
     </header>
