--- a/public/index.html
+++ b/public/index.html
@@ -93,32 +93,114 @@
           
           <div id="crossButton">&#10006;</div>
         </div>
-
-          <div class="block" id="container">
-            <ul class="data" data-current="0">
+          <h2>Menu</h2>
+          <!-- !!HÄR E GRID!!!! -->
+          <!-- !!HÄR E GRID!!!! -->
+          <!-- !!HÄR E GRID!!!! -->
           <div class="grid">
-            <span class="box">
+            <div class="box">
             <ul>
-              <li><a href="#">a</a></li>
+              <li><a href="#">About</a></li>
             </ul>
-            </span>
-            <span class="box">
+            </div>
+            <div class="box">
             <ul>
-              <li><a href="#">b</a></li>
+              <li><a href="#">About</a></li>
             </ul>
-            </span>
-            <span class="box">
+            </div>
+            <div class="box">
             <ul>
-              <li><a href="#">c</a></li>
+              <li><a href="#">About</a></li>
             </ul>
-            </span>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
+            <div class="box">
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            </div>
           </div>
-        </ul>
-          </div>
-
           <div id="stars-menu"></div> 
           <div id="stars-menu2"></div>
-        
         </div>
       </div>
     </header>
