--- a/public/index.html
+++ b/public/index.html
@@ -78,19 +78,22 @@
         />
 
         <button class="s">:3</button>
-        <button class="darkmode">YEP</button>
+        <button class="darkmode">🌙🌟</button>
         <div id="whenSignedOut">
-          <button id="signInBtnGoogle" class="btn login">Google</button>
+          <button id="signInBtnGoogle" class="btn login"><img src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" alt="google-logo"></button>
             </div>
-  
+
           <div id="whenSignedIn">
-            <div class="login">
-              <span id="userDetails"></span>
               <span id="userImg"></span>
+                <div class="dropdown-item">
+                  <span id="userDetails"></span>
+                  <span >🤷‍♀️</span>
+                  <span >🤶🔫</span>
+                  <span >🐱‍🏍</span>
+                  <span id="signOutBtn" class="btn signOut">Logout</span>
             </div>
-              <button id="signOutBtn" class="btn signOut">Logout</button>
-          </div>
-          
+        </div>
+
           <div id="crossButton">&#10006;</div>
         </div>
           <h2>Menu</h2>
