--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
         <button class="s">:3</button>
         <button class="darkmode">🌙🌟</button>
         <div id="whenSignedOut">
-          <button id="signInBtnGoogle" class="btn login"><img src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" alt="google-logo"></button>
+          <button id="signInBtnGoogle" class="btn login"><img class="google-logo" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" alt="google-logo"></button>
             </div>
 
           <div id="whenSignedIn">
