--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="Css/media.css" />
     <link rel="stylesheet" href="Css/modal.css" />
     <link rel="stylesheet" href="Css/menu.css" />
+    <link rel="stylesheet" href="Css/toogle.css" />
 
     <script defer src="js/menu.js"></script>
     <script defer src="js/login.js"></script>
@@ -77,8 +78,11 @@
           alt="Logo"
         />
 
-        <button class="s">:3</button>
-        <button class="darkmode">🌙🌟</button>
+        <label class="switch darkmode">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+
         <div id="whenSignedOut">
           <button id="signInBtnGoogle" class="btn login"><img class="google-logo" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" alt="google-logo"></button>
             </div>
