--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,12 @@
   <link rel="stylesheet" href="Css/modal.css" />
   <link rel="stylesheet" href="Css/menu.css" />
   <link rel="stylesheet" href="Css/toogle.css" />
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
   
   <script defer src="js/menu.js"></script>
   <script defer src="js/login.js"></script>
   <script defer src="js/modal.js"></script>
   <script defer src="js/scroll.js"></script>
   <script defer src="js/darkmode.js"></script>
-  <script defer src="js/img.js"></script>
-
-
 
   <!-- !Firebase -->
   <script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
@@ -72,9 +67,13 @@
 
           <img class="title" src="https://media.vgm.io/products/13/7731/7731-1601738358.png" alt="Logo" />
 
-          <label class="switch darkmode">
-            <input type="checkbox">
-            <span class="slider round"></span>
+          <input type="checkbox" class="darkmode" id="toggle_checkbox">
+
+          <label for="toggle_checkbox">
+            <div id="star">
+              <div class="star"></div>
+            </div>
+            <div id="moon"></div>
           </label>
 
           <div id="whenSignedOut">
@@ -101,61 +100,6 @@
         <!-- !!HÄR E GRID!!!! -->
         <!-- !!HÄR E GRID!!!! -->
         <div class="grid">
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="box">
-            <ul>
-              <li><a href="#">About</a></li>
-            </ul>
-          </div>
           <div class="box">
             <ul>
               <li><a href="#">About</a></li>
@@ -326,30 +270,6 @@
       </div>
     </div>
   </main>
-
-  <script>
-  let app = new PIXI.Application({
-    width: window.innerWidth,
-    height: window.innerHeight,
-  });
-  document.body.appendChild(app.view);
-  
-  let img = new PIXI.Sprite.from("img/snow.gif");
-  img.width = window.innerWidth;
-  img.height = window.innerHeight;
-  app.stage.addChild(img);
-  
-  depthMap = new PIXI.Sprite.from("img/imgage-s.jpg");
-  app.stage.addChild(depthMap);
-  
-  displacementFilter = new PIXI.filters.DisplacementFilter(depthMap);
-  app.stage.filters = [displacementFilter];
-  
-  window.onmousemove = function (e) {
-    displacementFilter.scale.x = (window.innerWidth / 3 - e.clientX) / 5;
-    displacementFilter.scale.y = (window.innerHeight / 1 - e.clientY) / 10;
-  };
-  </script>
 
 </body>
 
