--- a/public/index.html
+++ b/public/index.html
@@ -76,45 +76,46 @@
               src="https://media.vgm.io/products/13/7731/7731-1601738358.png"
               alt="Logo"
             />
+
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/snow.gif')">Home</a>
+                  <a href="#" onmouseover="changeImg('img/video2.mp4')">Story</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/cloud.gif')">Story</a>
+                  <a href="#" onmouseover="changeImg('img/video4.mp4')">Home</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/snow.gif')">Character</a>
+                  <a href="#" onmouseover="changeImg('img/video5.mp4')">Character</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/cloud.gif')">Staff & Cast</a>
+                  <a href="#" onmouseover="changeImg('img/video1.mp4')">Staff & Cast</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/snow.gif')">Music</a>
+                  <a href="#" onmouseover="changeImg('img/video3.mp4')">Music</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/cloud.gif')">About</a>
+                  <a href="#" onmouseover="changeImg('img/video6.mp4')">About</a>
                 </li>
               </ul>
             </div>
@@ -132,8 +133,12 @@
               
 
           <div class="left">
+
             <div class="img">
-              <img src="img/snow.gif" alt="snow" id="slider" />
+              <video loop autoplay muted id="slider">
+                <source src="img/video2.mp4" type="video/mp4">
+                Your browser does not support the video tag. :)
+              </video>
             </div>
 
             <div id="whenSignedOut">
