--- a/public/index.html
+++ b/public/index.html
@@ -80,42 +80,42 @@
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video2.mp4')">Story</a>
+                  <a href="#" data-current onclick="changeImg('img/video2.mp4')">Home</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video4.mp4')">Home</a>
+                  <a href="#"  onclick="changeImg('img/video4.mp4')">Story</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video5.mp4')">Character</a>
+                  <a href="#" onclick="changeImg('img/video5.mp4')">Character</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video1.mp4')">Staff & Cast</a>
+                  <a href="#" onclick="changeImg('img/video1.mp4')">Staff & Cast</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video3.mp4')">Music</a>
+                  <a href="#" onclick="changeImg('img/video3.mp4')">Music</a>
                 </li>
               </ul>
             </div>
             <div class="box">
               <ul>
                 <li>
-                  <a href="#" onmouseover="changeImg('img/video6.mp4')">About</a>
+                  <a href="#" onclick="changeImg('img/video6.mp4')">About</a>
                 </li>
               </ul>
             </div>
