--- a/public/index.html
+++ b/public/index.html
@@ -162,9 +162,8 @@
               <span id="userImg"></span>
               <div class="dropdown-item">
                 <span id="userDetails"></span>
-                <span>🤷‍♀️</span>
-                <span>🤶🔫</span>
-                <span>🐱‍🏍</span>
+                <span>Profile</span>
+                <span>Settings</span>
                 <span id="signOutBtn" class="btn signOut">Logout</span>
               </div>
             </div>
